# world_context_protocl

contract/: README.md  foundry.toml
contract/broadcast/DeployFactory.s.sol/11155111/: run-latest.json
contract/broadcast/DeployKnowledgeContract.s.sol/11155111/: run-1757887153.json
contract/broadcast/DeployWithSemID.s.sol/11155111/: run-1757887224.json
contract/script/: DeployFactory.s.sol  DeployKnowledgeContract.s.sol  DeployWithSemID.s.sol  VerifyDeployment.s.sol  VerifySemIDDeployment.s.sol  generate_semid.py
contract/src/: Create2CalcDeploy.sol  KnowledgeContract.sol
contract/test/: Counter.t.sol
meanhash/: README.md  api.py  blockchain_integration.py  convert.py  core_new.py  gold.py  mcp_server.py  pyproject.toml  test_blockchain_integration.py  test_mcp_tools.py
